# spl-whitelist-transfer

./: Anchor.toml
programs/spl-whitelist-transfer/: Cargo.toml
programs/spl-whitelist-transfer/src/: lib.rs
tests/: spl-whitelist-transfer.ts
